--- a/styles/_core.scss
+++ b/styles/_core.scss
@@ -32,3 +32,15 @@ body {
 		background: #444;
 	}
 }
+.peng li {
+	margin-right: 5px;
+	@media screen and (max-width: 1024px) {
+		img {
+			width: 30px;
+			height: 30px;
+		}
+		&+li+li+li+li {
+			display: none;
+		}
+	}
+}
