--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,12 +9,17 @@
 @import 'btn';
 @import 'node_modules/bootstrap/scss/bootstrap';
 @import 'node_modules/bootstrap-vue/src/index.scss';
-.dark-mode {
-    .main {
-        @media screen and (min-width: 1024px) {
-            margin-top: 60px;
-            padding-top: 30px;
+.main {
+    @media screen and (min-width: 1024px) {
+        margin-top: 60px;
+    }
+    position: relative;
+}
+.light-mode {
+    body {
+        background: var(--dyna-blur);
+        .main {
+            background: #fff;
         }
-        position: relative;
     }
 }
