--- a/styles/_consoles.scss
+++ b/styles/_consoles.scss
@@ -1,7 +1,7 @@
 .fluid {
     text-decoration: none;
     position: relative;
-    &::after {
+    &::before {
         content: "";
         position: absolute;
         bottom: -2px;
@@ -13,7 +13,7 @@
     }
     &:hover {
         text-decoration: none;
-        &::after {
+        &::before {
             width: 100%;
         }
     }
