--- a/styles/_core.scss
+++ b/styles/_core.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .dark-mode body {
-	--dyna-blur: rgba(0,0,0,.5);
+	--dyna-blur: linear-gradient(to bottom, #050505, rgba(5, 5, 5, .5));
 	--color: #fff;
 	--form-border: #333;
 	--card-bg: #111;
@@ -41,6 +41,49 @@ body {
 		}
 		&+li+li+li+li {
 			display: none;
+		}
+	}
+}
+
+.weather {
+	position: fixed;
+	left: 1.5rem;
+	bottom: 1.5rem;
+	background: rgba($color: #000, $alpha: .55);
+	backdrop-filter: blur(5px);
+	box-shadow: 0 0 0 2px rgba($color: #fff, $alpha: .3);
+	border-radius: 8px;
+	transition: all .2s ease-in-out;
+	img {
+		position: absolute;
+		transition: all .2s ease-in-out;
+	}
+	&.lg {
+		width: 250px;
+		height: 80px;
+		padding: 20px 10px 20px 70px;
+		border-radius: 8px;
+		img {
+			width: 50px;
+			height: 50px;
+			top: calc(50% - 25px);
+			left: 10px	
+		}
+	}
+	&.sm {
+		height: 70px;
+		width: 70px;
+		img {
+			width: 44px;
+			height: 44px;
+			top: calc(50% - 32px);
+			left: calc(50% - 22px);
+		}
+		span {
+			position: absolute;
+			bottom: 6px;
+			text-align:center;
+			width: 100%;
 		}
 	}
 }
