--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,5 @@
 // Light default theme
-$font-family-sans-serif: "Epilogue", sans-serif;
+$font-family-sans-serif: "Google Sans", sans-serif;
 
 // Coloring
 $primary: #f3b31e;
@@ -88,29 +88,15 @@ $input-focus-color: $primary;
 	.card-body, .card-title {
 		text-overflow: ellipsis;
 	}
+	img {
+		transition: all .2s ease-in-out;
+	}
 	cursor: pointer;
 	&:hover {
 		border-color: $primary!important;
-		box-shadow: 0 0 0 2px inset $primary;
-	}
-}
-.peoples {
-	@media screen and (min-width: 769px) and (max-width: 1366px){
-		.col-12:nth-child(1n+0) {
-			padding-right: 10px;
-		}
-		.col-12:nth-child(3n+0) {
-			padding-right: 10px;
-			padding-left: 0;
-		}
-	}
-	@media screen and (min-width: 1367px){
-		.col-12:nth-child(1n+0) {
-			padding-right: 10px;
-		}
-		.col-12:nth-child(4n+0) {
-			padding-right: 0;
-			padding-left: 0;
+		box-shadow: 0 0 0 .15rem inset $primary;
+		img {
+			transform: scale(1.05);
 		}
 	}
 }
