--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -4,7 +4,7 @@
 	font-weight: 500;
 	position: fixed!important;
 	@include top;
-	z-index: 11111;
+	z-index: 1111;
 	min-height: 70px;
 	@media screen and (min-width: 1024px) {
 		&-nav {
@@ -13,9 +13,22 @@
 	}
 	@media screen and (max-width: 1024px) {
 		&-nav {
-			border-top: 1px solid rgba($color: #fff, $alpha: .15);
+			li {
+				&:hover {
+					.nav-link, .nav-link:hover {
+						color: $primary;
+					}
+				}
+			}
 			li:not(:last-child) {
-				border-bottom: 1px solid rgba($color: #fff, $alpha: .15);
+				border-bottom: 2px dashed rgba($color: #fff, $alpha: .15);
+				padding-top: .75rem;
+				padding-bottom: .75rem;
+				&:hover {
+					color: $primary;
+					border-bottom-style: solid;
+					border-color: $primary;
+				}
 			}
 		}
 	}
@@ -23,6 +36,7 @@
 		color: $primary!important;
 	}
 	&.fixed {
+		background: rgba($color: #000, $alpha: .35);
 		border-bottom: 1px solid rgba($color: #fff, $alpha: .15);
 	}
 	@media screen and (min-width: 1024px) {
