--- a/styles/_front-banner.scss
+++ b/styles/_front-banner.scss
@@ -4,7 +4,7 @@
 		align-items: center;
 		flex-direction: column;
 		justify-content: space-between;
-		min-height: calc(100vh - 70px);
+		min-height: 100vh;
 		.body {
 			align-items: center;
 			display: flex;
